Fix image jumping bug

--- a/_assets/css/includes/_header.scss
+++ b/_assets/css/includes/_header.scss
@@ -11,8 +11,9 @@
         font-weight: bold;
         margin-bottom: 0;
       }
-      img {
+      .navigation-brand-img {
         height: 2.8rem;
+        width: 2.8rem;
         margin-top: 0.2rem;
       }
     }
