--- a/_assets/css/modules/_global.scss
+++ b/_assets/css/modules/_global.scss
@@ -56,6 +56,11 @@ ul ul {
   font-size: 100%;
 }
 
+img {
+  height: inherit;
+  width: inherit;
+}
+
 .global-cloud {
   list-style: none;
   margin-top: -0.5rem;
