--- a/_assets/css/pages/_index.scss
+++ b/_assets/css/pages/_index.scss
@@ -1,12 +1,15 @@
 .introduction {
   text-align: center;
   margin-bottom: 2rem;
-  img {
-    width: 15rem;
-    border-radius: 50%;
+  .introduction-img {
+    height: 15rem;
     margin-top: 0.5rem;
+    margin-bottom: 1.75rem;
+    img {
+      border-radius: 50%;
+    }
   }
-  p, h4 {
+  h4 {
     margin-bottom: 1rem;
   }
   h6 {
